# PortalAcademyFullStack

./: README.md  docker-compose.backend.yml  docker-compose.frontend.yml  setup.bat
backend/: .dockerignore  .gitignore  Dockerfile  academy.postman_collection.json  docker-compose.yaml  pyproject.toml
backend/documents/: EAP.md  EstruturaAPI.md  PRD.md  Termo.md
backend/form-worker/: dockerfile  pyproject.toml
backend/form-worker/form_worker/: .env  app.py  config.py  containers.py
backend/form-worker/form_worker/consumers/: send_email.py
backend/form-worker/form_worker/infrastructure/: logger.py
backend/form-worker/form_worker/utils/: email_validator.py
backend/form_generator/: .env  alembic.ini  app.py  config.py  containers.py  run_gunicorn.py
backend/form_generator/application/attendance/: controller.py  schemas.py
backend/form_generator/application/auth/: controller.py
backend/form_generator/application/form/: controller.py  schemas.py
backend/form_generator/application/group/: controller.py  schemas.py
backend/form_generator/application/user/: controller.py  schemas.py
backend/form_generator/helpers/adapters/: auth_adapter.py
backend/form_generator/infrastructure/broker/: async_kafka.py  interface.py
backend/form_generator/infrastructure/database/: mongo_database.py  (+1 more)
backend/form_generator/middlewares/: auth_middleware.py  request_context_middleware.py
backend/form_generator/repositories/: base_repository.py
backend/form_generator/services/: attendance_service.py  form_service.py  group_service.py  user_service.py
docs/: PRD.md
(+94 files in other folders)
